--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
     <!-- Home Section -->
     <section id="home">
-      <img src="image/tina-photo.jpg" alt="Tina Verma Photo" />
+      <img src="WhatsApp Image 2025-07-19 at 3.08.12 PM.jpeg" alt="Tina Verma Photo" />
       <div>
         <h2>Welcome!</h2>
         <p>
