--- a/index.html
+++ b/index.html
@@ -190,9 +190,7 @@
       <div>
         <h2>Welcome!</h2>
         <p>
-          Hi, I'm <strong>Tina Verma</strong>. Tina Verma is a passionate entrepreneur and the visionary founder of Peritx Innovation Pvt. Ltd., a dynamic e-commerce company focused on delivering innovative and quality-driven products to customers across India. With a strong belief in digital transformation and customer satisfaction, she has successfully built and scaled her brand in the competitive online market.
-
-At Peritex Innovation, Tina leads strategic planning, product development, and marketing efforts, ensuring every product meets high standards of quality and relevance. Her leadership style is grounded in creativity, persistence, and a commitment to empowering women and small businesses through digital platforms.
+          Hi, I'm <strong>Tina Verma</strong>.Tina Verma is a passionate entrepreneur in the IT software and e-commerce space. As the Co-Founder & CEO of Paritex Innovation Pvt. Ltd., founded by Punit Verma, she is dedicated to delivering innovative digital solutions and driving online business growth with a strong focus on technology, creativity, and customer experience.
         </p>
       </div>
     </section>
