--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
       <h2>Gallery</h2>
       <div class="gallery-photos">
         <!-- Add your photos here -->
-        <img src="image/sample1.jpg" alt="Gallery Image 1" />
-        <img src="image/sample2.jpg" alt="Gallery Image 2" />
-        <img src="image/sample3.jpg" alt="Gallery Image 3" />
+        <img src="WhatsApp Image 2025-07-19 at 3.29.38 PM (1).jpeg" alt="Gallery Image 1" />
+        <img src="WhatsApp Image 2025-07-19 at 3.08.12 PM.jpeg" alt="Gallery Image 2" />
+        <img src="WhatsApp Image 2025-07-19 at 3.29.37 PM.jpeg" alt="Gallery Image 3" />
         <!-- Add more images as needed -->
       </div>
     </section>
