--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <h2>Gallery</h2>
       <div class="gallery-photos">
         <!-- Add your photos here -->
-        <img src="WhatsApp Image 2025-07-19 at 3.29.38 PM (1).jpeg" alt="Gallery Image 1" />
+        <img src="secound" alt="Gallery Image 1" />
         <img src="WhatsApp Image 2025-07-19 at 3.08.12 PM.jpeg" alt="Gallery Image 2" />
         <img src="WhatsApp Image 2025-07-19 at 3.29.37 PM.jpeg" alt="Gallery Image 3" />
         <!-- Add more images as needed -->
