--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <!-- Add your photos here -->
         <img src="secound" alt="Gallery Image 1" />
         <img src="thired" alt="Gallery Image 2" />
-        <img src="first" alt="Gallery Image 3" />
+        <img src="aadi" alt="Gallery Image 3" />
         <!-- Add more images as needed -->
       </div>
     </section>
