--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <body>
 
   <header>
-    <div class="logo">Tina Verma</div>
+    <div class="logo">ParitexInnovation</div>
     <nav>
       <a href="#home">Home</a>
       <a href="#gallery">Gallery</a>
@@ -188,7 +188,7 @@
     <section id="home">
       <img src="WhatsApp Image 2025-07-19 at 3.08.12 PM.jpeg" alt="Tina Verma Photo" />
       <div>
-        <h2>Welcome!</h2>
+        <h2>CEO MESSAGE</h2>
         <p>
           Hi, I'm <strong>Tina Verma</strong>.Tina Verma is a passionate entrepreneur in the IT software and e-commerce space. As the Co-Founder & CEO of Paritex Innovation Pvt. Ltd., founded by Punit Verma, she is dedicated to delivering innovative digital solutions and driving online business growth with a strong focus on technology, creativity, and customer experience.
         </p>
