--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div>
         <h2>CEO MESSAGE</h2>
         <p>
-          Hi, I'm <strong>Tina Verma</strong>.Tina Verma is a passionate entrepreneur in the IT software and e-commerce space. As the Co-Founder & CEO of Paritex Innovation Pvt. Ltd., founded by Punit Verma, she is dedicated to delivering innovative digital solutions and driving online business growth with a strong focus on technology, creativity, and customer experience.
+          Hi, I'm <strong>Tina Verma</strong>.A Passionate entrepreneur in the IT software and e-commerce space. As the Co-Founder & CEO of Paritex Innovation Pvt. Ltd., founded by Punit Verma, she is dedicated to delivering innovative digital solutions and driving online business growth with a strong focus on technology, creativity, and customer experience.
         </p>
       </div>
     </section>
