--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
     <!-- Home Section -->
     <section id="home">
-      <img src="WhatsApp Image 2025-07-19 at 3.08.12 PM.jpeg" alt="Tina Verma Photo" class="profile" />
+      <img src="ba4ce995-32dc-4776-8289-51acb37c3314.png" alt="Tina Verma Photo" class="profile" />
       <div>
         <h2>CEO MESSAGE</h2>
         <img src="logo.png" alt="Company Logo" class="logo" />
